// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account reducer should handle the DID_SET action  1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "savedClaims": Object {
      "contact": Array [
        Object {
          "category": "contact",
          "claimField": "email",
        },
      ],
      "personal": Array [
        Object {
          "category": "personal",
          "claimField": "name",
        },
      ],
    },
  },
  "did": "mock did",
}
`;

exports[`account reducer should initialize correctly 1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "savedClaims": Object {
      "contact": Array [
        Object {
          "category": "contact",
          "claimField": "email",
        },
      ],
      "personal": Array [
        Object {
          "category": "personal",
          "claimField": "name",
        },
      ],
    },
  },
  "did": "",
}
`;
